@@ -1,9 +1,10 @@
 1.3
 ---
 
-* Added fade option for fading in/out tooltips
+* Added fade option (duration in ms) for fading in/out tooltips; IE <= 6 is excluded when bgiframe plugin is included
 * Fixed imagemaps in IE, added back example
 * Added positionLeft-option - positions the tooltip to the left of the cursor
+* Remove deprecated $.fn.Tooltip in favor of $.fn.tooltip
 
 1.2
 ---
